Revision history for Petal.

1.01
	- Applied Fergal's attr.patch

1.00 Tue Jul 15 20:35:19 BST 2003
	- Applied Steve's 'error on undef' patch
	- Happy Birthday Petal!

0.96 Mon Jun 30 13:34:22 2003
	- Fixed include + unicode + encode bug

0.95 Fri Jun 27 15:44:12 2003
	- Added $ENCODE_CHARSET and $DECODE_CHARSET options
	- Changed the include mechanism to make faulty include non fatal
	- Lengthy debug info is now written in tmp directory
	- Patched with Fergal Daly's require.patch
	- Refactored very slightly CodeGenerator.pm

0.94 Thu Jun 19 11:58:52 2003
	- Patched with Fergal Daly's indent.patch, expr.patch, warn.patch
	- Patched with Steve Purkis' contributed tests
	- Patched with Fergal Daly's contributed tests

0.93 Thu Jun 05 11:06:33 2003
	- Fixed petal:set and cached values bug
	- Changed error handling so that it's subclassable
	- Fixed Petal::Hash::VAR method invocation bug
	- Added and modded Grant McLean's incredible patch!

0.92 Tue Apr 22 14:01:56 2003
	- Tweaked the multi-lingual mechanism a little bit
	- Applied Fergal Daly's tests2.patch file
	- Made Fergal's CodeGeneratorString the default
        - Applied William's Hash.pm taintmode diff
        - Did a lot of work on the docs based on Patrick's suggestions 

0.91 Mon Apr 07 16:20:15 2003
	- Added multi-lingual mode
	- Added scoping to included templates
	- Applied Fergal Daly's XML_Encode_Decode patch
	- Revamped the documentation

0.90 Wed Apr 02 14:02:27 2003
	- Re-done plugin system

0.89 Tue Mar 25 13:57:24 2003
	- Fixed another critical bug due to changes in 0.87.

0.88 Mon Mar 24 15:17:31 2003
	- Fixed a critical bug due to changes in 0.87.

0.87 Mon Mar 17 17:25:00 2003
	- Rewrote / optimized Petal::Hash, which is now MUCH faster.

0.86 Tue Feb 25 11:30:06 2003
	- Fixed tags with hyphens being trunkated.

0.85 Mon Feb 10 16:48:29 2003
	- Made it so that code generator backend can be changed @ runtime.
	- Fixed entities not being encoded in static attributes fix!