@@ -70,4 +70,9 @@ COPYRIGHT AND LICENCE
   This module free software and is distributed under the
   same license as Perl itself.
 
-  Copyright (C) 2002 Jean-Michel Hiver <jhiver@mkdoc.com> 
+  Copyright (C) 2003 MKDoc Holdings Ltd.
+
+  Authors: Jean-Michel Hiver <jhiver@mkdoc.com>, 
+           Fergal Daly <fergal@esatclear.ie>,
+           and others.
+
