@@ -285,8 +285,8 @@ sub _endeval
     
     $class->add_code("return " . $class->_get_res() . ";");
     $class->indent_decrement();
-    $class->add_code("};");
-
+    $class->add_code("} || '';");
+    
     $class->add_code("if (defined \$\@ and \$\@) {");
     $class->indent_increment();
     $variable = quotemeta ($variable);
@@ -379,20 +379,26 @@ sub _for
 	$class->add_code("\@array = \@{".$class->comp_expr($variable)."};");
     }
     
-    $class->add_code("for (my \$i=0; \$i < \@array; \$i++) {");
+    $class->add_code ("local \$Petal::Hash_Repeat::MAX = \@array - 1;");
+    $class->add_code ("local \$Petal::Hash_Repeat::CUR = undef;");
+    $class->add_code ("for (my \$i=0; \$i < \@array; \$i++) {");
     $class->indent_increment();
-    $class->add_code("my \$hash = \$hash->new();");
-    $class->add_code("my \$count= \$i + 1;");
-    $class->add_code("\$hash->{__count__}    = \$count;");
-    $class->add_code("\$hash->{__is_first__} = (\$count == 1);");
-    $class->add_code("\$hash->{__is_last__}  = (\$count == \@array);");
-    $class->add_code("\$hash->{__is_inner__} = " .
-		                        "(not \$hash->{__is_first__} " . 
-		                        "and not \$hash->{__is_last__});");
+    $class->add_code ("\$hash->delete_cached (qr/__/);");
+    $class->add_code ("\$hash->delete_cached (qr/^\\Q$as\\E\$/);");
+    $class->add_code ("\$Petal::Hash_Repeat::CUR = \$i;");
+    $class->add_code ("\$hash->{__count__}    = sub { \$hash->{repeat}->number() };");
+    $class->add_code ("\$hash->{__is_first__} = sub { \$hash->{repeat}->start()  };");
+    $class->add_code ("\$hash->{__is_last__}  = sub { \$hash->{repeat}->end()    };");
+    $class->add_code ("\$hash->{__is_inner__} = sub { \$hash->{repeat}->inner()  };");
+    $class->add_code ("\$hash->{__even__}     = sub { \$hash->{repeat}->even()   };");
+    $class->add_code ("\$hash->{__odd__}      = sub { \$hash->{repeat}->odd()    };");
+    $class->add_code ("\$hash->{'$as'} = \$array[\$i];");
     
-    $class->add_code("\$hash->{__even__}     = (\$count % 2 == 0);");
-    $class->add_code("\$hash->{__odd__}      = not \$hash->{__even__};");
-    $class->add_code("\$hash->{'$as'} = \$array[\$i];");
+#    $class->add_code("my \$hash = \$hash->new();");
+#    $class->add_code("my \$count= \$i + 1;");
+#    $class->add_code("\$hash->{__count__}    = \$count;");
+#    $class->add_code("\$hash->{__is_first__} = (\$count == 1);");
+#    $class->add_code("\$hash->{__is_last__}  = (\$count == \@array);");    
 }
 
 
