@@ -130,9 +130,10 @@ sub process
 	    return '';
 	}
 
+	$current = (isa ($current, 'CODE')) ? $current->() : $current;
 	$current_path .= "/$next";
     }
-
+    
     return '' unless (defined $current);
     return $current;
 }
