@@ -2,6 +2,11 @@ Revision history for Petal.
 
 1.01
 	- Applied Fergal's attr.patch
+	- Applied Fergal's die.patch
+	- Changed Petal::Hash::Var to evaluate coderefs
+	- Introduced repeat object
+	- Changed copyright notice 
+	- Updated documentation 
 
 1.00 Tue Jul 15 20:35:19 BST 2003
 	- Applied Steve's 'error on undef' patch
